# nav-e

./: .gitignore  CLAUDE.md  CONTRIBUTING.MD  Makefile  README.md  SECURITY.MD  SUPPORT.MD  flutter_rust_bridge.yaml  offline-routing-plan.md  pubspec.yaml  run_tests.sh  temp.md
.cursor/rules/: dart-bloc-patterns.mdc  dart-ffi-bridge.mdc  project-context.mdc  proto-device-comm.mdc  rust-nav-engine.mdc
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: README.md  ci.yml  cut-release.yml  flutter_test.yml  frb_build.yml  frb_codegen_build.yml  labeler.yml  pr-title.yml  publish-on-tag.yml  release.yml  stale.yml
android/app/: build.gradle.kts
app/: README.md  pubspec.yaml
app/lib/: app.dart  main.dart
app/test/: widget_test.dart
assets/config/: map_sources.json
assets/data/: parking.geojson
assets/sql/: init.sql  schema.sql
assets/styles/: custom_style.json  custom_style_dark.json
coverage/: lcov.info
docs/: README.md  migrations-developer-guide.md  migrations-release.md  native-rust.md  plan.md  testing.md
docs/adr/: 0000-template.md  0001-adopt-ddd-hexagonal-cqrs.md  0002-rust-core-flutter-ui.md  0003-osrm-routing-engine.md  0004-nominatim-geocoding.md  0005-protocol-buffers-device-communication.md  README.md
docs/architecture/: overview.md
docs/flutter/: app.md
docs/guides/: device-communication.md  flutter-rust-bridge.md  testing.md
docs/nav-ir/: README.md  concepts.md  schema.md  versioning.md
docs/rust/: device-comm.md  nav-ir.md  nav_core.md  nav_engine.md  nav_route.md  overview.md  protobuf.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/app/: app_nav.dart  app_router.dart  app_router_delegate.dart  app_shell.dart  route_parser.dart
lib/bloc/: app_state_bloc.dart  location_bloc.dart  map_bloc.dart
lib/bridge/: analysis_options.yaml  api.dart  api_v2.dart  ffi.dart  ffi_models.dart  frb_generated.dart  frb_generated.freezed.dart  frb_generated.io.dart  frb_generated.web.dart  geocode.dart  lib.dart  migrations.dart  route.dart  types.dart
lib/core/: platform_check.dart  platform_check_io.dart  platform_check_stub.dart
lib/examples/: fetch_route_example.dart  navigation_device_example.dart
lib/models/: device.dart  geocoding_result.dart
lib/screens/: device_management_screen.dart  home_screen.dart  map_screen.dart  start_route_screen.dart
lib/services/: geocoding_service.dart  location_permission_handler.dart
lib/utils/: database_helper.dart
lib/widgets/: draggable_fab_widget.dart  map_widget.dart  search_bar_widget.dart  search_modal_widget.dart  side_menu_drawer.dart  subtext.widget.dart  user_location_marker.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
native/: ARCHITECTURE.md  Cargo.toml
native/api_playground/: Cargo.toml  README.md
native/api_playground/src/: main.rs  playground.html
native/device_comm/: Cargo.toml  build.rs
native/nav_core/: Cargo.toml
native/nav_e_ffi/: Cargo.toml
native/nav_e_ffi/src/: ffi_models.rs  frb_generated.rs  lib.rs
native/nav_e_ffi/tests/: api_smoke_test.rs
native/nav_engine/: Cargo.toml  build.rs
native/nav_engine/src/: api.rs  api_v2.rs  derive_instructions.rs  engine.rs  frb_generated.rs  geocode.rs  lib.rs  off_route.rs  osrm.rs  progress.rs  route.rs  types.rs
native/nav_engine/src/api/: device_comm.rs  devices.rs  dto.rs  geocoding.rs  helpers.rs  mod.rs  navigation.rs  offline_regions.rs  routes.rs  saved_places.rs
native/nav_engine/src/application/: commands.rs  handlers.rs  mod.rs  queries.rs  service_helpers.rs  traits.rs
native/nav_engine/src/domain/: entities.rs  events.rs  mod.rs  ports.rs  value_objects.rs
native/nav_engine/src/infrastructure/: base_repository.rs  database.rs  geocoding_adapter.rs  in_memory_repo.rs  mod.rs  osrm_adapter.rs  protobuf_adapter.rs
native/nav_engine/src/migrations/: m20231201000000_initial_schema.rs  m20250224000000_trips.rs  mod.rs
native/nav_ir/: Cargo.toml
native/nav_ir/fixtures/: gpx_like.json  minimal.json  osrm_like.json
native/nav_ir/src/: lib.rs  types.rs
native/nav_ir/src/adapters/: custom_api.rs  google_routes.rs  gpx.rs  graphhopper.rs  mod.rs  osrm.rs  valhalla.rs
native/nav_protocol/: Cargo.toml
native/nav_protocol/src/: messages.rs
native/nav_route/: Cargo.toml
native/nav_route/src/: lib.rs  multi.rs
native/nav_route/src/geocoding/: mod.rs
native/nav_route/src/google_routes/: mod.rs
native/nav_route/src/navdsp/: config.rs  fallback_geocoding.rs  geocoding.rs  mod.rs
native/nav_route/src/osrm/: mod.rs
native/nav_route/src/valhalla/: mod.rs
proto/: README.md  navigation.proto
scripts/: create_migration.sh  generate_bindings.sh  generate_proto.sh  post_codegen.sh  validate_release.sh
test/: integration_tests.dart  widget_test.dart
test/helpers/: mocks.dart  test_data_builders.dart  test_helpers.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+335 files in other folders)
