[package]
name = "api_playground"
version = "0.1.0"
edition = "2021"
description = "Local HTTP playground to test nav_engine API endpoints (Storybook-style)"

[[bin]]
name = "api_playground"
path = "src/main.rs"

[dependencies]
nav_e_ffi = { path = "../nav_e_ffi" }
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors"] }
tempfile = "3"
