[package]
name = "nav_e_ffi"
version = "0.1.0"
edition = "2021"

[lib]
# rlib: so api_playground and integration tests can call the same FFI surface as Flutter
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
nav_engine = { path = "../nav_engine" }
flutter_rust_bridge = "=2.11.1"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
