[package]
name = "nav_engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
reqwest = { version = "0.12", features = ["json", "gzip", "rustls-tls"] }
flutter_rust_bridge = "=2.11.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
polyline = "0.11"
urlencoding = "2"
chrono = { version = "0.4", features = ["serde"] }
