[package]
name = "nav_engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
reqwest = { version = "0.12", features = ["json", "gzip", "rustls-tls"] }
flutter_rust_bridge = "=2.11.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
polyline = "0.11"
urlencoding = "2"
chrono = { version = "0.4", features = ["serde"] }
prost = "0.13"
bytes = "1"
crc32fast = "1"
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"
sha2 = "0.10"
device_comm = { path = "../device_comm" }
rusqlite = { version = "0.32", features = ["bundled"] }

[build-dependencies]
prost-build = "0.13"
