[package]
name = "nav_engine"
version = "0.1.0"
edition = "2021"
description = "Runtime turn-by-turn navigation engine — pure logic, no I/O"

[lib]
crate-type = ["rlib"]

[dependencies]
nav_ir = { path = "../nav_ir" }
polyline = "0.11"
geo-types = "0.7"

[dev-dependencies]
chrono = { version = "0.4", features = ["serde"] }
