[package]
name = "nav_ir"
version = "0.1.0"
edition = "2021"
description = "Navigation Intermediate Representation - canonical, engine-agnostic route format"

[lib]
crate-type = ["rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
polyline = "0.11"
geo-types = "0.7"
gpx = "0.10"

[dev-dependencies]
serde_json = "1"
