[package]
name = "nav_protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = "0.4"
geo-types = "0.7"
nav_ir = { path = "../nav_ir" }
polyline = "0.11"
prost = "0.13"
crc32fast = "1.4"
serde_json = "1"
sha2 = "0.10"
uuid = { version = "1.0", features = ["v4"] }
thiserror = "1.0"

[build-dependencies]
prost-build = "0.13"
